xidl-parser/tests/snapshots/test_const__hir__const_dec.snap
---
source: xidl-parser/tests/test-const.rs
expression: hir
---
Specification(
    [
        ConstDcl(
            ConstDcl {
                ty: IntegerType(
                    I32,
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "10",
                        ),
                    ),
                ),
            },
        ),
    ],
)
