xidl-parser/tests/snapshots/test_const__hir__const_hex.snap
---
source: xidl-parser/tests/test-const.rs
expression: hir
---
Specification(
    [
        ConstDcl(
            ConstDcl {
                ty: IntegerType(
                    I32,
                ),
                ident: "a",
                value: ConstExpr(
                    XorExpr(
                        AndExpr(
                            ShiftExpr(
                                AddExpr(
                                    MultExpr(
                                        UnaryExpr(
                                            PrimaryExpr(
                                                Literal(
                                                    IntegerLiteral(
                                                        IntegerLiteral(
                                                            "255",
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            },
        ),
    ],
)
