xidl-parser/tests/snapshots/test_const__hir__const_oct.snap
---
source: xidl-parser/tests/test-const.rs
expression: hir
---
Specification(
    [
        ConstDcl(
            ConstDcl {
                annotations: [],
                ty: IntegerType(
                    I32,
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "8",
                        ),
                    ),
                ),
            },
        ),
    ],
)
