xidl-parser/tests/snapshots/test_const__hir__const_scoped_name.snap
---
source: xidl-parser/tests/test-const.rs
expression: hir
---
Specification(
    [
        ConstDcl(
            ConstDcl {
                ty: ScopedName(
                    ScopedName {
                        name: [
                            "int",
                        ],
                        is_root: false,
                    },
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: IntegerType(
                    U8,
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: IntegerType(
                    U16,
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: IntegerType(
                    U32,
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: IntegerType(
                    U64,
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: IntegerType(
                    I8,
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: IntegerType(
                    I16,
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: IntegerType(
                    I32,
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: IntegerType(
                    I64,
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: ScopedName(
                    ScopedName {
                        name: [
                            "char8",
                        ],
                        is_root: false,
                    },
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: ScopedName(
                    ScopedName {
                        name: [
                            "char16",
                        ],
                        is_root: false,
                    },
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: CharType,
                ident: "C1",
                value: Literal(
                    CharLiteral(
                        "'X'",
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: WideCharType,
                ident: "C2",
                value: Literal(
                    WideCharacterLiteral(
                        "L'X'",
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: StringType(
                    StringType {
                        bound: None,
                    },
                ),
                ident: "C3",
                value: Literal(
                    StringLiteral(
                        "\"aaa\"",
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: WideStringType(
                    WideStringType {
                        bound: None,
                    },
                ),
                ident: "C3",
                value: Literal(
                    WideStringLiteral(
                        "L\"aaa\"",
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: ScopedName(
                    ScopedName {
                        name: [
                            "bool",
                        ],
                        is_root: false,
                    },
                ),
                ident: "C3",
                value: ScopedName(
                    ScopedName {
                        name: [
                            "false",
                        ],
                        is_root: false,
                    },
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: ScopedName(
                    ScopedName {
                        name: [
                            "A",
                        ],
                        is_root: true,
                    },
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: ScopedName(
                    ScopedName {
                        name: [
                            "A",
                            "B",
                        ],
                        is_root: false,
                    },
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: ScopedName(
                    ScopedName {
                        name: [
                            "A",
                            "B",
                            "C",
                        ],
                        is_root: false,
                    },
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: ScopedName(
                    ScopedName {
                        name: [
                            "A",
                            "B",
                            "C",
                            "D",
                            "E",
                            "F",
                        ],
                        is_root: false,
                    },
                ),
                ident: "a",
                value: Literal(
                    IntegerLiteral(
                        IntegerLiteral(
                            "0",
                        ),
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: ScopedName(
                    ScopedName {
                        name: [
                            "M",
                            "Size",
                        ],
                        is_root: false,
                    },
                ),
                ident: "MYSIZE",
                value: ScopedName(
                    ScopedName {
                        name: [
                            "M",
                            "medium",
                        ],
                        is_root: false,
                    },
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: FloatingPtType,
                ident: "const_float",
                value: Literal(
                    FloatingPtLiteral(
                        FloatingPtLiteral {
                            sign: None,
                            integer: DecNumber(
                                "13",
                            ),
                            fraction: DecNumber(
                                "1",
                            ),
                        },
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: FloatingPtType,
                ident: "const_double",
                value: Literal(
                    FloatingPtLiteral(
                        FloatingPtLiteral {
                            sign: None,
                            integer: DecNumber(
                                "84",
                            ),
                            fraction: DecNumber(
                                "1",
                            ),
                        },
                    ),
                ),
            },
        ),
        ConstDcl(
            ConstDcl {
                ty: FloatingPtType,
                ident: "const_longdouble",
                value: Literal(
                    FloatingPtLiteral(
                        FloatingPtLiteral {
                            sign: None,
                            integer: DecNumber(
                                "46",
                            ),
                            fraction: DecNumber(
                                "1",
                            ),
                        },
                    ),
                ),
            },
        ),
    ],
)
